<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/authentication"
        android:text="@string/authentication"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:text="@string/email"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/authentication"
        android:textColor="@android:color/black"
        />

    <EditText
        android:id="@+id/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:layout_below="@id/email"
        android:textColor="@android:color/black"
        />

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@id/enter_email"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/black"
        />

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_below="@id/password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        />


    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_lowercase"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        />



</RelativeLayout>
