<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout

            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:paddingBottom="16dp"
            android:weightSum="1"
            >

        <LinearLayout
            android:id="@+id/backBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/back_arrow"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_launcher_round"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_below="@id/backBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/product"
            android:layout_below="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/prodDesc"
            android:layout_below="@id/product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/decription"
            android:layout_below="@id/prodDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_info"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <ImageView
            android:id="@+id/prodImg"
            android:layout_below="@id/decription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"/>

        <TextView
            android:id="@+id/prize"
            android:layout_below="@id/prodImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prize_text"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/prizeRes"
            android:layout_toRightOf="@id/prize"
            android:layout_below="@id/prodImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prize_example"
            android:textSize="20sp"
            android:layout_margin="10dp"/>


    </RelativeLayout>
</ScrollView>