<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">


    <ImageView
        android:id="@+id/imageproduct"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_launcher"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_toRightOf="@id/imageproduct"
        >

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/prize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prize_example"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dp"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/prize"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/amount_label"
            android:textColor="@android:color/black"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        >

        <TextView
            android:id="@+id/accumulated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/accumulated"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>
    </RelativeLayout>

</RelativeLayout>